--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.90.0",
+    "@types/file-saver": "^2.0.7",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.474.0",
@@ -19,7 +21,8 @@
     "react-hot-toast": "^2.6.0",
     "react-imask": "^7.6.1",
     "react-router-dom": "^7.1.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
